Changes for DateTime::Set

0.3900 2016-10-09
- require Params::Validate

0.3800 2016-05-23
- doc patch, by Lucas Kanashiro.

0.3700 2016-05-17
- end() / max() and start() / min() are aliases to the same method in all classes.
  Added docs and tests. Reported by Vincent Berger.

0.3600 2015-11-11
- move t/22intersects.t to DT::Event::Recurrence module

0.3500 2015-11-10
- [rt.cpan.org #108633] Recurrent event does not intersect indefinite future,
  test contributed by Brett Watson.
- documentation - intersects() returns 0 for false, and 'undef' for
  undecidable.

0.3400 2014-02-12
- documentation and packaging fixes - by David Steinbrunner.
- version number using 4 digits - requested by David Marshall.

0.33   2013-09-15
- bugfix in SpanSet->grep. Reported by Andreas Isberg

0.32   2013-08-27
- ignore duration signal in DateTime::Span->from_datetime_and_duration()
  and use the 'end'/'start' parameters as a cue for the time direction,
  suggested by David Pottage
- more tests of intersections with open/closed ended spans

0.30   2011-04-11
- new test file t/21from_recurrence.t 
  Contributed by Olivier Mengue

0.29   2011-04-01 
- new method is_empty_set - bug #50750

0.28   2009-07-19
- optimized DateTime::Set->as_list().
  This works around a segfault reported by Nils Grunwald.

0.27   2009-04-02
- fixed DateTime::Spanset duration() method.
  Reported by Anton Berezin <tobez@tobez.org>

0.26   2008-12-25
- fixed DateTime::Spanset current() and set_time_zone() methods. 
  Report and tests by Elliot Shank.

0.25   2005-10-05
- t/15time_zone.t does it's own time zone "add_duration" handling

0.24   2005-10-03
- _recurrence.pm warned when the recurrence didn't have occurrences before
  a given start date. Reported by Mark D. Anderson. 

0.23   2005-10-03
- _recurrence.pm died when the recurrence didn't have occurrences before
  a given start date. Reported by Mark D. Anderson. 

0.22   2005-05-06
- DateTime::Set 0.21 dies when as_list is asked to produce a list from